# TimescaleDB

./: README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docker/config/datasources/: grafana-datasource.yml  tool-datasource.yml
src/scripts/: test_load.py  test_recive.py
